--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@ body {
     width: 600px;
     height: auto;
 }
+#mensaje {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+#mensaje.visible {
+    opacity: 1;
+}
